# dld-quiz-bot

./: .dockerignore  .env.example  .gitignore  DockerFile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0627b8ad4ba2_create_initial_tables.py
data/: questions.json
github/workflows/: ci.yml
src/dld_quiz_bot/: constants.py  enums.py  main.py  paths.py  repository.py
src/dld_quiz_bot/db/: database.py  models.py  repository.py  seed.py
src/dld_quiz_bot/handlers/: exam.py  info.py  learn.py  middleware.py  settings.py  start.py  stats.py  stop.py  utils.py
tests/: conftest.py  test_repository.py
