[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[project]
name = "dld-quiz-bot"
version = "0.1.0"
description = "Telegram Quiz Bot for Das Leben in Deutschland"
readme = "README.md"
authors = [
    { name = "Mykyta Kuzminov", email = "mykytakuzminov@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.2",
    "psycopg2-binary==2.9.12",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "tox>=4.53.0",
    "tox-uv>=1.35.1",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "PT", "RUF"]
ignore = ["E501", "UP017"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.14"
ignore_missing_imports = true
mypy_path = "src"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
